--- a/markup/components/container/container.styl
+++ b/markup/components/container/container.styl
@@ -2,6 +2,7 @@
     display: block
     width: container-width
     margin: 0 auto
+    box-sizing: border-box;
 
     +below(1134px)
         width 100%
