--- a/markup/components/model-info-mobile-popup/model-info-mobile-popup.styl
+++ b/markup/components/model-info-mobile-popup/model-info-mobile-popup.styl
@@ -1,10 +1,13 @@
+#model-info-mobile-popup
+    z-index 100000
+
 .model-info-mobile-popup
     display flex
     flex-direction column
     max-width 100%;
     width 320px
     background #fff;
-    box-shadow 0 10px 40px rgba(29, 29, 29, .1)
+    box-shadow 0 10px 40px rgba(210, 163, 111, .1)
 
     +below(700px)
         width 100%
