--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -39,6 +39,9 @@
         .search-bar_dark &
             color: #fff
 
+        &:focus + .search-bar__placeholder
+            display: none !important
+
     &__placeholder
         position: absolute
         top: 50%
