--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -133,6 +133,10 @@
         flex-shrink: 0
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
 
+        .selectbox_dark &,
+        .selectbox_deep-dark &
+            box-shadow: 0 10px 40px 0 rgba(mainColor, .1);
+
         +below(1024px)
             position: static
             margin-left: 0
