--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -4,7 +4,7 @@
     top: 0
     left: 0
     width: 100%
-    height: 100vh
+    height: 100%
     background-color: rgba(darkGreyColor, .9)
     z-index: 500
     overflow-y: auto
