--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -41,6 +41,7 @@
         font-size 16px
         font-weight 400
         text-decoration: none
+        pointer-events: all !important
 
     &__count
         color: #fff
