--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -11,7 +11,7 @@ modelInfoPopupMediumXPadding = 18px
     background-color: #fff
     z-index: 100
     box-sizing: border-box
-    box-shadow 0 0 40px 0 rgba(210, 163, 111, .15)
+    box-shadow 0 10px 40px rgba(29, 29, 29, .1)
     opacity: 0
     pointer-events none
     m-transition(opacity, transform)
