--- a/markup/components/user-dropdown-popup/user-dropdown-popup.pug
+++ b/markup/components/user-dropdown-popup/user-dropdown-popup.pug
@@ -36,7 +36,7 @@ mixin user-dropdown-popup()
                 li
                     +e.A(href='user-likes.html').link Invite Friends
             +e.row
-                +e.col
+                +e.col._s0
                     +e.A(href='about-us.html').link._color_grey About us
                     +e.A(href='model-list-help.html').link._color_grey Help
                     +e.A(href='terms.html').link._color_grey privacy & Terms
