--- a/markup/components/user-dropdown-popup/user-dropdown-popup.styl
+++ b/markup/components/user-dropdown-popup/user-dropdown-popup.styl
@@ -58,6 +58,12 @@
     &__col
         width: 50%
 
+        &_s0
+            flex-shrink 0
+
+        &:not(:last-child)
+            padding-right: 24px
+
     &__link
         font-size 16px
         letter-spacing 1px
