--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -53,6 +53,9 @@
             left 0
             pointer-events none
 
+            &__button
+                display inline-block !important
+
         &.active
 
             & ^[0]__send-activation
