--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -63,6 +63,8 @@
     &__select
         display: block
         padding-right: 24px
+        z-index: 1;
+        position: relative;
 
         .selectbox
             justify-content: space-between
