--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -841,7 +841,7 @@ mixin user-fill-profile-8
                     +col(4)
                         +field
                             +field-label Phone
-                            +field-input(value='+1 818 554-9937')
+                            +field-input.js-phone-mask
 
         .user-fill-profile__section
             +grid
