--- a/markup/components/phone-number/phone-number.pug
+++ b/markup/components/phone-number/phone-number.pug
@@ -27,7 +27,7 @@ mixin phone-number()
                 +col(4)
                     +field
                         +field-label Phone number
-                        +field-input
+                        +field-input.js-phone-mask
                 +col(3)
                     +field
                         +field-label SMS code
