--- a/markup/components/profile-common-popup/profile-common-popup.styl
+++ b/markup/components/profile-common-popup/profile-common-popup.styl
@@ -48,6 +48,10 @@
         .share__buttons
             margin-top: 0
 
+    +below(400px)
+        margin-left: 0
+        margin-right 0
+
     .image-bg
         width: 100%
         height: 347px
