--- a/markup/components/contacts/contacts.pug
+++ b/markup/components/contacts/contacts.pug
@@ -21,7 +21,7 @@ mixin contacts()
             +col(12)
                 +field
                     +field-label Message
-                    +field-input
+                    +field-textarea
             +col(3)
                 +button._uppercase._bg_darkGrey._color_main Send
 
