--- a/markup/components/help/help.pug
+++ b/markup/components/help/help.pug
@@ -9,6 +9,6 @@ mixin help()
                 +heading._md._color_white Megan, welcome to LocalEscort!
                 +e.P.description Please add a profile photo to attract new visitors to your profile.
             +e.col
-                +button(href='#')._bg_darkGrey._color_white._uppercase.__action add photo
+                +button(href='user-fill-profile.html')._bg_darkGrey._color_white._uppercase.__action add photo
             +e.col
                 +button(href='#')._bg_main._color_white._border_light-white._uppercase.__action._hide hide
