--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -1,6 +1,18 @@
 .field
     display: block
 
+    &__textarea
+        display: block
+        width: 100%
+        border: 1px solid borderColor
+        color darkGreyColor
+        font-family fontMain
+        font-size 16px
+        font-weight 400
+        min-height: 100px
+        padding: 20px
+        background-color: transparent
+
     &__input
         display: block
         width: 100%
