--- a/markup/components/model-photos/model-photos.styl
+++ b/markup/components/model-photos/model-photos.styl
@@ -101,6 +101,10 @@
         background-color: mainColor
         border-radius: 50%
 
+        +below(767px)
+            width 40px
+            height 40px
+
         &::before
             content: ''
             width: 0
@@ -109,3 +113,6 @@
             border-width: 9px 0 9px 16px
             border-color: transparent transparent transparent #fff
             margin-left: 4px
+
+            +below(767px)
+                border-width 7px 0 7px 12px
