--- a/markup/components/profile-card/profile-card.styl
+++ b/markup/components/profile-card/profile-card.styl
@@ -15,6 +15,9 @@
     &__container
         padding: 0 40px
 
+        +below(767px)
+            padding: 0 31px
+
         &_center
             text-align: center
 
@@ -61,9 +64,16 @@
         margin-left: 13px
         margin-right: 13px
 
+        +below(767px)
+            margin-left: 0
+            margin-right: 0
+
     &__share
         display: block
         margin-top: 30px
+
+        +below(767px)
+            text-align center
 
         &-heading
             display: block
@@ -72,6 +82,10 @@
             font-weight 400
             text-transform uppercase
             padding-left: 11px
+
+            +below(767px)
+                padding-left: 0
+                text-align left
 
         &-links
             display: flex
@@ -95,6 +109,9 @@
 
                 &:hover
                     color: mainColor
+
+            +below(767px)
+                display inline-flex
 
     &__label
         margin: 20px auto
