--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -64,7 +64,8 @@
 
     &__button
         display: block
-        margin-right: 24px
+        padding: 24px;
+        height: 100%;
         border: 0
         background-color: transparent
 
