--- a/markup/components/user-profile/user-profile.pug
+++ b/markup/components/user-profile/user-profile.pug
@@ -23,10 +23,10 @@ mixin user-profile(isPopup, isEmpty)
                         +heading My profile
 
                     +col(2)
-                        +short-info
+                        +short-info.user-profile__place
                             +short-info-heading._md Your profile is at the
                             +short-info-content
-                                +short-info-text._md 2741 place
+                                +short-info-text._md 2741 position
                     +col(3)
                         +button()(href='#')._uppercase._bg_darkGrey._color_white Boost my account
                     +col(2)
