--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -8,6 +8,14 @@
         +below(768px)
             padding: 0
 
+    &__place
+        +below(767px)
+            text-align center
+
+            .short-info__text_md
+                font-size: 20px;
+                text-transform: uppercase;
+
     &__header
         margin-top: 8px
 
