--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -82,7 +82,7 @@ mixin user-fill-profile-2
                 +col(4)
                     +field
                         +field-label Your age
-                        +field-input(value=22)
+                        +field-input
 
                 +col(4)
                     +field
@@ -468,11 +468,11 @@ mixin user-fill-profile-4
                 +col(6)
                     +field
                         +field-label Email
-                        +field-input(value='mail@mail.com')
+                        +field-input
                 +col(6)
                     +field
                         +field-label Website
-                        +field-input(value='www.LocalModel.com')
+                        +field-input
         .user-fill-profile__section
             +heading._md Social Network (Past URL or Account name)
             +grid
@@ -813,11 +813,11 @@ mixin user-fill-profile-8
                     +col(6)
                         +field
                             +field-label Tour name
-                            +field-input(value='Girls is on tour in Roterdam')
+                            +field-input
                     +col(6)
                         +field
                             +field-label Status
-                            +field-input(value="I'm right now on my tour (4 more days)")
+                            +field-input
                     +col(6)
                         +field
                             +field-label From
