--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -531,38 +531,44 @@ mixin user-fill-profile-5
                     span.user-fill-profile__label.user-fill-profile__label_control-like 1/2 hour
                 +col(4)
                     +field
-                        +field-label Incall
+                        +field-label.user-fill-profile__morelabel Incall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
-                        +field-label Outcall
+                        +field-label.user-fill-profile__morelabel Outcall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4).grid__col_align_center
                     span.user-fill-profile__label 1 hour
                 +col(4)
                     +field
+                        +field-label.user-fill-profile__mobile-label.user-fill-profile__morelabel Incall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
+                        +field-label.user-fill-profile__mobile-label.user-fill-profile__morelabel Outcall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4).grid__col_align_center
                     span.user-fill-profile__label 2 hour
                 +col(4)
                     +field
+                        +field-label.user-fill-profile__mobile-label.user-fill-profile__morelabel Incall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
+                        +field-label.user-fill-profile__mobile-label.user-fill-profile__morelabel Outcall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4).grid__col_align_center
                     span.user-fill-profile__label Night
                 +col(4)
                     +field
+                        +field-label.user-fill-profile__mobile-label.user-fill-profile__morelabel Incall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
                 +col(4)
                     +field
+                        +field-label.user-fill-profile__mobile-label.user-fill-profile__morelabel Outcall
                         +field-input(placeholder="0 $").js-change-currency-el.js-currency-input
 
                 +col(4)
