--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -334,3 +334,9 @@
         padding-left: 18px !important
         padding-right: 18px
         padding-bottom: 18px
+
+    +below(440px)
+        .grid__col_six &
+            .badges
+                display none
+
