--- a/markup/components/model-common-info/model-common-info.styl
+++ b/markup/components/model-common-info/model-common-info.styl
@@ -38,6 +38,8 @@
                     padding: 12px 14px
                     flex-direction: row
                     justify-content: flex-start
+                +below(440px)
+                    justify-content: center
 
     &__name
         font-size: 20px
