--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -41,6 +41,9 @@
         +below(768px)
             border: 0
 
+            &:first-child
+                margin-top: 0
+
     &__profile-card
         width: 316px
         transform: translate3d(0, 0, 0);
