--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -22,6 +22,7 @@
         border: 2px solid transparent
         border-radius: 50%
         display: block
+        z-index 100
 
         .close
             display: none
