--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -111,6 +111,7 @@
         left: 30px
         z-index: 111
         max-height: 100%
+        -webkit-overflow-scrolling: touch
 
         &.scroll-wrapper
             +below(767px)
