--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -184,7 +184,7 @@ mixin user-fill-profile-2
                                     option(value='kg' selected data-multiplier="1") kg
                                     option(value='lbs' data-multiplier="2.20462") lbs
                         +selectbox
-                            +selectbox-control(name='weight' data-switcher-id="#ev2g13xb8a")
+                            +selectbox-control(name='weight')#ev2g13xb8a
                                 option(value='40' data-initial-value="40") 40
                                 option(value='45' data-initial-value="45") 45
                                 option(value='50' data-initial-value="50") 50
