--- a/markup/components/model-list/model-list-search-result.pug
+++ b/markup/components/model-list/model-list-search-result.pug
@@ -25,7 +25,7 @@ mixin model-list(heading)
                             option(value='distance') Distance
                             option(value='Rating') Rating
                             option(value='Price') Price
-                +e.header-col.hide-desktop
+                +e.header-col._sort-ui.hide-desktop
                     +sort-ui
                 +e.header-col.hide-mob
                     +button(href='model-map.html')._color_white._bg_darkGrey._uppercaseView View on map
