--- a/markup/components/profile-common-popup/profile-common-popup.pug
+++ b/markup/components/profile-common-popup/profile-common-popup.pug
@@ -44,7 +44,7 @@ mixin profile-common-popup-call
                 +e.P.text Attention! Do not settle for an advance payment if you are not sure of the seller's reliability. Check the goods before transferring money. Do not trust too cheap offers.
 
         .profile-common-popup__footer
-            +button(href='#')._border_standart._uppercase.profile-common-popup__button Ok
+            +button(href='#')._border_standart._uppercase.profile-common-popup__button.js-popup-close Ok
 
 mixin profile-common-popup-qr
     +profile-common-popup('profile-qr')
